--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script type="text/babel">
         const { useState, useEffect } = React;
 
-        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwJl3ZABFBNpnuTgtBlwlwnjkYjKvCvL4GGLzKnTixbrFELgDNNx0ElcRpEaqgQo8znvQ/exec';
+        const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwgeFvJdq5syjWPZHciJecPsIhZWNPUhmbjYX1CcqXiVNJFqqgWEV3dicVpsZwQ0g/exec';
 
         const Clock = () => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><circle cx="12" cy="12" r="10"/><polyline points="12 6 12 12 16 14"/></svg>);
         const AlertTriangle = () => (<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" strokeWidth="2"><path d="m21.73 18-8-14a2 2 0 0 0-3.48 0l-8 14A2 2 0 0 0 4 21h16a2 2 0 0 0 1.73-3Z"/><line x1="12" y1="9" x2="12" y2="13"/><line x1="12" y1="17" x2="12.01" y2="17"/></svg>);
@@ -141,7 +141,7 @@
                 const r = calculateResults(); 
                 setResults(r); 
                 setCompleted(true); 
-                fetch(GOOGLE_SCRIPT_URL, { method: 'POST', mode: 'no-cors', body: JSON.stringify({ timestamp: new Date().toISOString(), fullName: studentInfo.name, email: studentInfo.email, track: studentInfo.track, score: `${r.correct}/${r.total}`, percentage: `${r.percentage}%`, timeUsed: formatTime(7200 - timeRemaining), ...answers })}).catch(e => console.error(e));
+                fetch(GOOGLE_SCRIPT_URL, { method: 'POST', headers: {'Content-Type': 'application/json'}, body: JSON.stringify({ timestamp: new Date().toISOString(), fullName: studentInfo.name, email: studentInfo.email, track: studentInfo.track, score: `${r.correct}/${r.total}`, percentage: `${r.percentage}%`, timeUsed: formatTime(7200 - timeRemaining), ...answers })}).catch(e => console.error(e));
             };
 
             const downloadCSV = () => {
